--- a/Appointment.html
+++ b/Appointment.html
@@ -73,7 +73,13 @@
       <form action="" id="form">
         <label for="">Name</label>
         <br />
-        <input type="text" placeholder="Enter Your Name" id="name" />
+        <input 
+        type="text" 
+        placeholder="Enter Your Name" 
+        id="name" 
+        name="name"
+        />
+        
         <br />
         <label for="">Email</label>
         <br />
