--- a/Appointment.html
+++ b/Appointment.html
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
     <style>
-      /* body {
-        background: url("https://user-images.githubusercontent.com/39142850/67110554-fdea5400-f20d-11e9-834a-d459a612b7b1.gif")
-          rgba(0, 0, 0, 0.5);
-        background-size: cover;
-        background-blend-mode: darken;
-      } */
       #form-div {
         border: 1px solid white;
         width: 50%;
@@ -73,13 +67,7 @@
       <form action="" id="form">
         <label for="">Name</label>
         <br />
-        <input 
-        type="text" 
-        placeholder="Enter Your Name" 
-        id="name" 
-        name="name"
-        />
-        
+        <input type="text" placeholder="Enter Your Name" id="name" />
         <br />
         <label for="">Email</label>
         <br />
@@ -96,5 +84,5 @@
     </div>
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
-  <script src="/Appointment.js"></script>
+  <script src="Appointment.js"></script>
 </html>
