--- a/Appointment.html
+++ b/Appointment.html
@@ -67,7 +67,9 @@
       <form action="" id="form">
         <label for="">Name</label>
         <br />
-        <input type="text" placeholder="Enter Your Name" id="name" />
+        <input type="text" 
+        placeholder="Enter Your Name" 
+        id="name" />
         <br />
         <label for="">Email</label>
         <br />
