--- a/Appointment.html
+++ b/Appointment.html
@@ -69,7 +69,8 @@
         <br />
         <input type="text" 
         placeholder="Enter Your Name" 
-        id="name" />
+        id="name"
+        required/>
         <br />
         <label for="">Email</label>
         <br />
@@ -77,8 +78,10 @@
           type="text"
           type="email"
           placeholder="Enter Your Email"
+          
+
           id="email"
-          name="email"
+          required
         />
         <br />
         <input type="submit" value="Submit" />
